deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: laravel-app
spec:
  replicas: 5
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
        # Create the shared files volume to be used in both pods
        - name: shared-files
          emptyDir: {}
        - name: nginx-config-volume
          configMap:
            name: nginx-config
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
        - name: php-fpm
          image: yohang/php-laravel:latest
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp -r /application/. /var/www/html && cp /var/www/html/.env.example /var/www/html/.env && chmod -R 777 /var/www/html/storage"]
