deployment-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-mysql-service
spec:
  selector:
    app: laravel-mysql
  ports:
  - port: 3306
  clusterIP: None
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: laravel-mysql
spec:
  template:
    metadata:
      labels:
        app: laravel-mysql
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
