ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: laravel-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: laravel-app-service
          servicePort: 80
